--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@
 #header {
   position: relative;
   height: 22%;
-  padding: .75rem 1.5rem .75rem 0rem !important;
+  padding: .75rem 0rem !important;
   border: 1px solid #6c757d0c;
   border-top-left-radius: .5rem;
   border-top-right-radius: .5rem;
@@ -59,6 +59,7 @@
   max-height: 100%;
   width: 100%;
   margin-left: auto !important;
+  padding-right: 1.25rem !important;
 }
 
 #header #biography #aboutme-qus {
@@ -145,7 +146,7 @@
 #content {
   height: 79%;
   background-color: #FFF;
-  padding: .75rem 1.25rem .75rem 0rem;
+  padding: .75rem 0rem;
   border-bottom: 1px solid #6c757d0c;
   border-left: 1px solid #6c757d0c;
   border-right: 1px solid #6c757d0c;
@@ -153,17 +154,21 @@
   border-bottom-right-radius: .5rem !important;
 }
 
-#content #section {
+#content #sections {
+  padding-right: 1.25rem;
+}
+
+#content #sections #section {
   width: 100%;
 }
 
-#content #section #topic {
+#content #sections #section #topic {
   height: 100%;
-  min-width: 25%;
-  max-width: 25%;
+  min-width: 26%;
+  max-width: 26%;
 }
 
-#content #section #topic p {
+#content #sections #section #topic p {
   list-style-type: none;
   font-size: small;
   font-weight: bold;
@@ -172,30 +177,30 @@
   text-overflow: ellipsis;
 }
 
-#content #section #topic #shortnote {
+#content #sections #section #topic #shortnote {
   font-size: 7px;
   font-weight: 400;
 }
 
-#content #section #divider-verticle-sm {
+#content #sections #section #divider-verticle-sm {
   width: .1rem;
   background-color: #6c757d0c;
   border-radius: .75rem;
 }
 
-#content #section #topic-contents, #content #section #topic-contents-last {
+#content #sections #section #topic-contents, #content #sections #section #topic-contents-last {
   padding-bottom: .75rem;
 }
 
-#content #section #topic-contents #topic-content, #content #section #topic-contents-last #topic-content {
+#content #sections #section #topic-contents #topic-content, #content #sections #section #topic-contents-last #topic-content {
   padding-bottom: .25rem;
 }
 
-#content #section #topic-contents #topic-content:last-child, #content #section #topic-contents-last #topic-content:last-child {
+#content #sections #section #topic-contents #topic-content:last-child, #content #sections #section #topic-contents-last #topic-content:last-child {
   padding-bottom: 0rem !important;
 }
 
-#content #section #topic-contents #title, #content #section #topic-contents-last #title {
+#content #sections #section #topic-contents #title, #content #sections #section #topic-contents-last #title {
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -204,7 +209,7 @@
   color: #212529;
 }
 
-#content #section #topic-contents #status, #content #section #topic-contents-last #status {
+#content #sections #section #topic-contents #status, #content #sections #section #topic-contents-last #status {
   margin-left: .5rem !important;
   margin-right: .25rem !important;
   margin: 0;
@@ -222,7 +227,7 @@
   background-color: #D1E7DD;
 }
 
-#content #section #topic-contents #information, #content #section #topic-contents-last #information {
+#content #sections #section #topic-contents #information, #content #sections #section #topic-contents-last #information {
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -231,7 +236,7 @@
   color: #6c757dc2;
 }
 
-#content #section #topic-contents #information a, #content #section #topic-contents-last #information a {
+#content #sections #section #topic-contents #information a, #content #sections #section #topic-contents-last #information a {
   padding-left: .25rem;
   padding-right: .25rem;
   padding-bottom: .05rem;
@@ -241,12 +246,12 @@
   background-color: #DACAE3;
 }
 
-#content #section #topic-contents #shortnote, #content #section #topic-contents-last #shortnote {
+#content #sections #section #topic-contents #shortnote, #content #sections #section #topic-contents-last #shortnote {
   font-size: 7px;
   font-weight: 400;
 }
 
-#content #section #topic-contents-last {
+#content #sections #section #topic-contents-last {
   padding-bottom: 0rem !important;
 }
 
