--- a/sass/style.scss
+++ b/sass/style.scss
@@ -100,20 +100,58 @@ $border-sm: 1px solid $color-secondary-lighter;
 #canvas {
   height: 100vh;
   width: 100vw;
-  background-color: $color-base;
-  #button {
-    z-index: 999;
-    position: absolute;
-    bottom: 5%;
-    right: 5%;
-    transform: translate(0, -50%);
-  }
+  background-color: #212529;
+  
   #paper {
     height: 90vh;
-    background-color: $color-primary;
+    background-color: $color-base;
     box-shadow: 3px 6px 8px -3px rgba(0,0,0,0.3);
     @include broder-bottom();
     @include broder-top();
+    position: relative;
+
+    #button-download {
+        z-index: 999;
+        position: absolute;
+        top: 5%;
+        right: -20%;
+        transform: translate(0, -50%);
+        a{
+            color: $text-primary;
+            text-decoration: none;
+            font-size: x-small;
+            font-weight: 600;
+            i {
+                font-size: small;
+            }
+
+            &:last-child {
+            padding-left: .25rem;
+        }
+        }
+        
+    }
+
+    #button-back {
+        z-index: 999;
+        position: absolute;
+        top: 5%;
+        left: -8%;
+        transform: translate(0, -50%);
+        a{
+            color: #6C757Dec;
+            text-decoration: none;
+            font-size: .75rem;
+            i {
+                font-size: 1.25rem;
+            }
+            &:hover {
+                color: $color-secondary;
+            }
+        }
+        
+    }
+
   }
   #paper:hover {
     box-shadow: 5px 8px 10px -3px rgba(0,0,0,0.3);
